# dannis-sync

./: .gitignore  LICENSE  README-TAR.md  README.md  gitconfig-setup.md  push_config.py  pyproject.toml  scp-into.bat  vscode_config.py
configs/: .gitconfig  settings.json
configs/git-configs/: .gitconfig-init.sh  README.md  git-ssh-key.sh
configs/unix-configs/: .bashrc  .bashrc-init.sh  .tmux.conf  .vimrc  .vimrc-init.sh
loader/: CfgLoader.py  gitconfig_loader.py
mirror/: run_with_mirrors.bat  run_with_mirrors_analysis.md
src/sync/vsc/: vscode_config.md  vscode_config.py
tests/: test_vscode_config.py
unix/install/: install.sh
unix/unix-configs/: .tmux.conf
