[project]
name = "sync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dannis", email = "hzzhanyuyang@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
sync = "sync:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]